--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo CJAVA
-configuracion.autor.nombre=Edwin Maravi
+configuracion.autor.nombre=Ivan Saldaña Rojas
 configuracion.autor.email=isaldanarojas@gmail.com
